# spin_boson_model

./: .gitignore  CMakeLists.txt  Makefile  README.md
smsb_exact/: main.f90
src/: CTEF.f90  CTEF_dynamics.f90  CTEF_module.f90  FBTS.f90  FBTS_dynamics.f90  FBTS_initial_distribution.f90  JFBTS_dynamics.f90  MTEF.f90  MTEF_dynamics.f90  PBME.f90  PBME_dynamics.f90  PBME_initial_distribution.f90  correlated_gaussian_random_number.f90  err_finalize.f90  gaussian_random_number.f90  global_variables.f90  initialize_mpi.f90  main.f90  math_module.f90  random_number_module.f90  setting_bath_parameters.f90  spin_propagation.f90  thermal_bath_distribution.f90
